--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+*{
+  scroll-behavior: smooth;
+  padding: 0;
+  margin: 0;
+}
+
+body{
+  overflow-x: hidden;
+}
+
 .App {
   text-align: center;
 }
