--- a/src/utils/variable.scss
+++ b/src/utils/variable.scss
@@ -8,5 +8,10 @@ $lineHeight: 2;
 $color1: #4d784e;
 $color2: #333;
 $color3: #e7e7e7;
+$color4: #578858;
+$color5: #436844;
+$color6: #2fa931;
+$color7: #e8e8e8;
+$color8: #dee2e6;
 
 $desktop: 1100px;
