--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,20 +1,77 @@
 @import '../../utils/variable.scss';
 
+// size navbar
+@mixin laptop {
+    @media (min-width: 1115px) and (max-width: 1254px) {
+        @content;
+    }
+}
+
+@mixin mobile {
+    @media (max-width: 1114px) {
+        @content;
+    }
+}
+
+// logo web
+@mixin logoWeb {
+    @media (min-width: 1000px) {
+        @content;
+    }
+}
+@mixin logoWeb1 {
+    @media (min-width: 1350px) {
+        @content;
+    }
+}
+@mixin logoWeb2 {
+    @media (min-width: 1450px) {
+        @content;
+    }
+}
+@mixin logoWeb3 {
+    @media (min-width: 1681px) {
+        @content;
+    }
+}
+
+// font menu
+@mixin fontMenu {
+    @media (min-width: 1781px) {
+        @content;
+    }
+}
+
 .wrapp-nav {
+    display: flex;
+    flex-direction: column;
     position: absolute;
     z-index: 1;
     right: 0;
     left: 0;
 
+    @include mobile(){
+        display: none;
+    }
+
+    // kontak
     .contact-nav {
         display: flex;
         width: auto;
+        padding: 0 10%;
+
+        @include laptop(){
+            padding: 0 5%;
+        }
+
+        @include logoWeb3(){
+            padding: 0 15%;
+        }
 
         .address-nav {
             display: flex;
             flex-wrap: wrap;
             width: 75%;
-            padding-left: 15px;
 
             .address {
                 display: flex;
@@ -31,7 +88,7 @@
                 .txt-address {
                     display: flex;
                     text-align: start;
-                    font-size: $font1;
+                    font-size: 12px;
                     color: #fff;
                 }
             }
@@ -42,11 +99,10 @@
             justify-content: flex-end;
             align-items: center;
             width: 25%;
-            padding-right: 15px;
 
             i {
                 padding-left: 10px;
-                font-size: $fontIcon;
+                font-size: 12px;
                 cursor: pointer;
                 color: #fff;
             }
@@ -59,7 +115,7 @@
                 outline: none;
                 cursor: pointer;
                 margin-left: 10px;
-                font-size: 12.5px;
+                font-size: 12px;
                 align-items: center;
                 color: #fff;
 
@@ -79,6 +135,7 @@
                     opacity: 0;
                     animation: 0.2s ease-in opacity forwards;
                     background-color: #fff;
+                    border: 1px solid #ddd;
 
                     .language {
                         font-size: 10.5px;
@@ -94,20 +151,49 @@
         }
     }
 
+    .line-grey{
+        display: flex;
+        height: 0.5px;
+        width: 100%;
+        background-color: #eee;
+    }
+
+    // page
     .page-nav {
         display: flex;
-        padding: 20px 15px;
-        align-items: center;
-        border-top: 1px solid #ddd;
+        padding: 20px 10%;
         justify-content: space-between;
 
+        @include laptop(){
+            padding: 20px 5%;
+        }
+
+        @include logoWeb3(){
+            padding: 20px 15%;
+        }
+
         .logo-web {
-            width: 290px;
+            display: flex;
+            min-height: auto;
+            width: 10%;
             object-fit: cover;
             object-position: center;
             cursor: pointer;
-        }
 
+            @include logoWeb(){
+                width: 15%;
+            }
+            @include logoWeb1(){
+                width: 20%;
+            }
+            @include logoWeb2(){
+                width: 25%;
+            }
+            @include fontMenu(){
+                width: 30%;
+            }
+        }
+        
         .list-menu-page {
             display: flex;
             align-items: center;
@@ -117,7 +203,7 @@
                 list-style: none;
                 padding: 5px 10px;
                 cursor: pointer;
-                font-size: 13px;
+                font-size: 12px;
                 font-weight: 500;
                 color: #fff;
 
@@ -130,12 +216,14 @@
                     position: absolute;
                     margin-left: -10px;
                     padding-top: 10px;
+                    z-index: 1;
 
                     .menu-collapse {
                         flex-direction: column;
                         border-radius: 3px;
                         padding: 8px 0;
                         background-color: #fff;
+                        border: 1px solid #ddd;
 
                         .page-collapse {
                             list-style: none;
@@ -159,6 +247,20 @@
                 font-size: 14px;
                 color: #fff;
             }
+        }
+    }
+
+    // text walk
+    .text-walk{
+        display: flex;
+        width: auto;
+        background-color: $color1;
+        padding: 10px 10%;
+        font-size: 14px;
+        color: #fff;
+
+        @include logoWeb3(){
+            padding: 10px 15%;
         }
     }
 }
