--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,5 +1,32 @@
 @import '../../utils/variable.scss';
 
+// for navbar
+@mixin laptop {
+    @media (min-width: 1115px) and (max-width: 1254px) {
+        @content;
+    }
+}
+
+// for navbar
+@mixin mobile {
+    @media (max-width: 1114px) {
+        @content;
+    }
+}
+
+// for content home
+@mixin tablet {
+    @media (max-width: 1254px) {
+        @content;
+    }
+}
+
+@mixin minDesktop {
+    @media (min-width: 1681px) {
+        @content;
+    }
+}
+
 .wrapp-home {
     display: flex;
     flex-direction: column;
@@ -8,8 +35,11 @@
     .banner-video {
         display: flex;
         height: 100vh;
-        width: 100vw;
         position: relative;
+
+        @include mobile(){
+            display: none;
+        }
 
         .video {
             display: flex;
@@ -18,138 +48,148 @@
 
         .txt-move {
             position: absolute;
-            margin: 0 15px;
-            padding-right: 15px;
+            margin: 0 10%;
             bottom: 15px;
             color: #fff;
             font-size: 14px;
+
+            @include laptop(){
+                margin: 0 5%;
+            }
+
+            @include minDesktop(){
+                margin: 0 15%;
+            }
         }
     }
 
     .wrapp-content-home{
         display: flex;
+        flex-direction: column;
         width: auto;
-        justify-content: center;
-        padding: 40px 0;
+        padding: 40px 10%;
 
-        .content-home{
+        @include tablet(){
+            padding: 40px 5%;
+        }
+
+        @include minDesktop(){
+            padding: 40px 15%;
+        }
+
+        .container-blog-home{
             display: flex;
             flex-direction: column;
-            width: $desktop;
+            margin-top: 40px;
+            width: auto;
+            background-color: $color3;
+            border-radius: 10px;
+            padding: 40px 0px;
 
-            .container-blog-home{
+            // selayang pandang
+            .selayang-pandang-home{
                 display: flex;
-                flex-direction: column;
-                margin-top: 40px;
-                width: auto;
-                background-color: $color3;
-                border-radius: 10px;
-                padding: 40px 0px;
+                padding: 0 30px;
 
-                // selayang pandang
-                .selayang-pandang-home{
+                .img-selayang-pandang{
+                    width: 40%;
+                    object-fit: cover;
+                    object-position: center;
+                    border-radius: 3px;
+                }
+
+                .paragraph-selayang-pandang{
                     display: flex;
-                    padding: 0 30px;
+                    flex-direction: column;
+                    margin-left: 30px;
 
-                    .img-selayang-pandang{
-                        width: 40%;
-                        object-fit: cover;
-                        object-position: center;
-                        border-radius: 3px;
-                    }
-
-                    .paragraph-selayang-pandang{
-                        display: flex;
-                        flex-direction: column;
-                        margin-left: 30px;
-                        justify-content: center;
-
-                        .title-selayang-pandang{
-                            color: $color1;
-                            font-weight: bold;
-                            font-size: 20px;
-                            text-align: start;
-                            margin-bottom: 20px;
-                        }
-
-                        .deskripsi-selayang-pandang{
-                            color: $color2;
-                            font-size: $font2;
-                            text-align: start;
-                            line-height: $lineHeight;
-                            margin-bottom: 20px;
-                        }
-                    }
-                }
-
-                // jajaran pimpinan
-                .jajaran-pimpinan{
-                    padding: 0 30px;
-                    .struktur-pimpinan{
-                        display: flex;
-                        flex-direction: column;
-                        align-items: center;
-                        margin-top: 40px;
-
-                        .tiga-pimpinan-lainnya{
-                            margin-top: 30px;
-                        }
-                    }
-                }
-
-                // layanan unggulan
-                .layanan-unggulan{
-                    padding: 0 30px;
-                }
-
-                // berita
-                .berita-home{
-                    padding: 0 30px;
-                }
-                
-                // testimoni
-                .testimoni{
-                    padding: 0 0 0 30px;
-                }
-
-                // col group
-                .col-group{
-                    margin-top: 60px;
-                    .title{
-                        text-align: start;
-                        font-size: 24px;
+                    .title-selayang-pandang{
                         color: $color1;
                         font-weight: bold;
-                        margin-bottom: 10px;
+                        font-size: 20px;
+                        text-align: start;
+                        margin-bottom: 20px;
+                        margin-top: 10px;
                     }
 
-                    .deskripsi{
-                        text-align: start;
+                    .deskripsi-selayang-pandang{
                         color: $color2;
                         font-size: $font2;
-                    }
-
-                    .col-card{
-                        display: flex;
-                        margin-top: 40px;
-                        flex-wrap: wrap;
-                        justify-content: space-between;
-                    }
-
-                    .container-btn{
-                        display: flex;
-                        justify-content: center;
-                        margin-top: 5px;
+                        text-align: start;
+                        line-height: $lineHeight;
+                        margin-bottom: 20px;
                     }
                 }
+            }
 
-                // media
-                .media{
+            // jajaran pimpinan
+            .jajaran-pimpinan{
+                padding: 0 30px;
+                .struktur-pimpinan{
                     display: flex;
-                    margin: 40px 30px 0 30px;
-                    border-radius: 10px;
-                    overflow: hidden;
+                    flex-direction: column;
+                    align-items: center;
+                    margin-top: 40px;
+
+                    .tiga-pimpinan-lainnya{
+                        margin-top: 30px;
+                    }
                 }
+            }
+
+            // layanan unggulan
+            .layanan-unggulan{
+                padding: 0 30px;
+            }
+
+            // berita
+            .berita-home{
+                padding: 0 30px;
+            }
+            
+            // testimoni
+            .testimoni{
+                padding: 0 0 0 30px;
+            }
+
+            // col group
+            .col-group{
+                margin-top: 60px;
+                .title{
+                    text-align: start;
+                    font-size: 24px;
+                    color: $color1;
+                    font-weight: bold;
+                    margin-bottom: 10px;
+                }
+
+                .deskripsi{
+                    text-align: start;
+                    color: $color2;
+                    font-size: $font2;
+                }
+
+                .col-card{
+                    display: flex;
+                    margin-top: 40px;
+                    flex-wrap: wrap;
+                    justify-content: space-between;
+                }
+
+                .container-btn{
+                    display: flex;
+                    justify-content: center;
+                    margin-top: 5px;
+                }
+            }
+
+            // media
+            .media{
+                display: flex;
+                margin: 40px 30px 0 30px;
+                border-radius: 10px;
+                overflow: hidden;
+                position: relative;
             }
         }
     }
