--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -114,6 +114,11 @@
                 margin: 15px 8px 0 0;
                 cursor: pointer;
             }
+
+            // polling
+            .container-form-polling{
+                flex-direction: column;
+            }
         }
     }
 
