--- a/src/utils/variable.scss
+++ b/src/utils/variable.scss
@@ -16,3 +16,9 @@ $color8: #dee2e6;
 $color9: #39593a;
 
 $desktop: 1100px;
+
+// urutan responsive kepadatan page
+// mobile - 767px - padding 0 5%
+// tablet - 1115px - padding 0 10%
+// semiDesktop - 1254px - padding 0 5%
+// desktop - 1254px ++ - padding 0 10%
